# monkedh

./: .gitignore  README.md  monkedh_crew.log.txt  notification.json  protocols_urgences.json  pyproject.toml  requirements.txt  run_test.ps1
backend/: main.py
frontend/: app.py
src/monkedh/: crew.py  main.py
src/monkedh/config/: agents.yaml  tasks.yaml
src/monkedh/tools/: redis_storage.py  samu_notification_tool.py
src/monkedh/tools/image_suggestion/: __init__.py  clip_retriever.py  emergency_agent.py  image_embeddings.npz  image_metadata.json
src/monkedh/tools/rag/: README.md  __init__.py  chunker.py  config.py  rag_tool.py  vectorize.py  vectorize_document.py
src/monkedh/tools/voice/: __init__.py  gpt_realtime.py
tests/: data.txt  output_pymupdf.md  output_unstructured.json  test_unstructured.py
